--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ScrapeBotR
 Type: Package
 Title: Retrieve Data from a ScrapeBot Database
-Version: 0.1.0
+Version: 0.2.0
 Authors@R:
     person(given = 'Mario', 
            family = 'Haim', 
@@ -11,6 +11,8 @@ Description: ScrapeBotR (with "R") allows to easily retrieve (large amounts of) 
     The package provides easy-to-use functions to read and export instances, recipes, runs, log information, and data. Thereby, the package plugs neatly into the tidyverse as it makes heavy use of tibbles.
     The ScrapeBot (without "R") is a tool for so-called "agent-based testing" to automatically visit, modify, and scrape a defined set of webpages regularly. It was built to automate various web-based tasks and keep track of them in a controllable way for academic research, primarily in the realm of computational social science.
 License: GPL-2
+URL: https://github.com/MarHai/ScrapeBotR
+BugReports: https://github.com/MarHai/ScrapeBotR/issues
 Encoding: UTF-8
 Imports:
     DBI,
@@ -18,4 +20,8 @@ Imports:
     magrittr,
     RMariaDB,
     tibble
+Suggests: 
+    DBItest,
+    testthat
 RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
