move credentials to external config file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(get_recipes)
 export(get_run_data)
 export(get_run_log)
 export(get_runs)
+export(write_credentials)
 importFrom(magrittr,"%>%")
