--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ScrapeBotR
 Type: Package
 Title: Retrieve Data from a ScrapeBot Database
-Version: 0.2.0
+Version: 0.3.0
 Authors@R:
     person(given = 'Mario', 
            family = 'Haim', 
@@ -15,6 +15,7 @@ URL: https://github.com/MarHai/ScrapeBotR
 BugReports: https://github.com/MarHai/ScrapeBotR/issues
 Encoding: UTF-8
 Imports:
+    configr, 
     DBI,
     dplyr,
     magrittr,
