--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,28 @@
 Package: ScrapeBotR
 Type: Package
 Title: Retrieve Data from a ScrapeBot Database
-Version: 0.3.0
+Version: 0.4.0
 Authors@R:
     person(given = 'Mario', 
            family = 'Haim', 
            email = 'mario@haim.it', 
            role = c('aut', 'cre'))
 Description: ScrapeBotR (with "R") allows to easily retrieve (large amounts of) data from a ScrapeBot installation.
-    The package provides easy-to-use functions to read and export instances, recipes, runs, log information, and data. Thereby, the package plugs neatly into the tidyverse as it makes heavy use of tibbles.
+    The package provides easy-to-use functions to read and export instances, recipes, runs, log information, and data. It also allows to bulk-download screenshots from S3. Thereby, the package plugs neatly into the tidyverse as it makes heavy use of tibbles.
     The ScrapeBot (without "R") is a tool for so-called "agent-based testing" to automatically visit, modify, and scrape a defined set of webpages regularly. It was built to automate various web-based tasks and keep track of them in a controllable way for academic research, primarily in the realm of computational social science.
-License: GPL-2
+License: file LICENSE
 URL: https://github.com/MarHai/ScrapeBotR
 BugReports: https://github.com/MarHai/ScrapeBotR/issues
 Encoding: UTF-8
 Imports:
+    aws.s3,
     configr, 
     DBI,
     dplyr,
+    magick,
     magrittr,
     RMariaDB,
+    stringr,
     tibble
 Suggests: 
     DBItest,
