allow default selection of AMIs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(activate_recipe_step)
 export(add_instance)
 export(add_recipe)
 export(add_recipe_step)
+export(aws_default_ec2_image)
 export(aws_launch_database)
 export(aws_launch_instance)
 export(aws_launch_storage)
